Clean up unused code